--- a/style/style.css
+++ b/style/style.css
@@ -27,6 +27,7 @@ ul {
     margin-left: auto;
     display: flex;
     list-style: none;
+    margin-right: 100px;
 }
 
 li {
@@ -56,7 +57,7 @@ a {
     font-size: 48px;
     font-weight: 900;
     color: rgb(248, 242, 242);
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .hero-left p {
@@ -72,9 +73,54 @@ a {
     border-style: none;
     border-radius: 10px;
     font-size: 20px;
-    font-weight: normal;
+    font-weight: bold;
 }
 
 .hero-section img {
     width: 500px;
+}
+
+/* CARDS SECTION */
+
+.cards-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+    margin: 60px;
+}
+
+.cards-container {
+    height: 180px;
+    width: 180px;
+    display: flex;
+    justify-content: center;
+    flex: 1;
+    gap: 50px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-face {
+    height: 180px;
+    width: 180px;
+    border: 5px solid #3882f6;
+    border-radius: 20px;
+    margin-bottom: 10px;
+}
+
+.card-text {
+    text-align: center;
+    color: #333;
+    font-size: 20px;
+    margin-bottom: 120px;
 }
