--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ body {
 .header-section {
     display: flex;
     background-color: #1f2937;
-    padding: 16px;
+    padding: 36px;
     align-items: center;
 }
 
@@ -31,7 +31,7 @@ ul {
 }
 
 li {
-    margin-right: 20px;
+    margin-right: 30px;
 }
 
 a {
@@ -116,6 +116,14 @@ h2 {
     border: 5px solid #3882f6;
     border-radius: 20px;
     margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card-face img {
+    width: 90%;
+    height: auto;
 }
 
 .card-text {
