--- a/style/style.css
+++ b/style/style.css
@@ -86,13 +86,15 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 60px;
+    padding-bottom: 120px;
 }
 
 h2 {
     font-size: 36px;
     font-weight: 900;
     color: #1f2937;
-    margin: 60px;
+    margin-bottom: 60px;
 }
 
 .cards-container {
@@ -130,7 +132,6 @@ h2 {
     text-align: center;
     color: #333;
     font-size: 20px;
-    margin-bottom: 120px;
 }
 
 /* QUOTE SECTION */
